<resources>
    <string name="app_name">Angel</string>

    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="signin">SIGNIN</string>
    <string name="login">LOGIN</string>
    <string name="username">UserName</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="back">BACK</string>


</resources>
